<resources>
    <string name="app_name">Gastos Móvil Plus</string>
    <string name="cabDatos">Resumen de </string>
    <string name="cabRegistros">Registro de llamadas</string>
    <string name="separador">    </string>
    <string name="aj_tarifaLlamadas">Tarifa llamadas</string>
    <string name="aj_tarifaLlamadas_des">Tarifa única: por minuto, en centimos y sin IVA.</string>
    <string name="aj_tarifaSMS">Tarifa SMS</string>
    <string name="aj_tarifaSMS_des">Tarifa SMS: por mensaje, en centimos y sin IVA.</string>
    <string name="aj_tarifaEstLlamada">Tarifa establecimiento de llamadas</string>
    <string name="aj_tarifaEstLlamada_des">Tarifa establecimiento de llamadas: en centimos y sin IVA</string>
    <string name="aj_color">Color</string>
    <string name="aj_color_des">Selecciona el color que identifica esta tarifa.</string>
    <string name="aj_tarifaEsp1">Tarifa Especial 1</string>
    <string name="aj_tarifaEsp1_des">Tarifas especiales que se aplican a ciertos números.</string>
    <string name="aj_tarifaEsp1Nombre">Nombre de la tarifa</string>
    <string name="aj_tarifaEsp1Nombre_des">Nombre que identifica a la tarifa.</string>
    <string name="aj_tarifaEsp1Llamadas">Tarifa llamadas</string>
    <string name="aj_tarifaEsp1Llamadas_des">Tarifa única: por minuto, en centimos y sin IVA.</string>
    <string name="aj_tarifaEsp1SMS">Tarifa SMS</string>
    <string name="aj_tarifaEsp1SMS_des">Tarifa SMS: por mensaje, en centimos y sin IVA.</string>
    <string name="aj_tarifaEsp1EstLlamada">Tarifa establecimiento de llamadas</string>
    <string name="aj_tarifaEsp1EstLlamada_des">Tarifa establecimiento de llamadas: en centimos y sin IVA</string>
   	<string name="aj_colorEsp1">Color</string>
    <string name="aj_colorEsp1_des">Selecciona el color que identifica esta tarifa.</string>
    <string name="aj_tarifaEsp2">Tarifa Especial 2</string>
    <string name="aj_tarifaEsp2_des">Tarifas especiales que se aplican a ciertos números.</string>
    <string name="aj_tarifaEsp2Nombre">Nombre de la tarifa</string>
    <string name="aj_tarifaEsp2Nombre_des">Nombre que identifica a la tarifa.</string>
    <string name="aj_tarifaEsp2Llamadas">Tarifa llamadas</string>
    <string name="aj_tarifaEsp2Llamadas_des">Tarifa única: por minuto, en centimos y sin IVA.</string>
    <string name="aj_tarifaEsp2SMS">Tarifa SMS</string>
    <string name="aj_tarifaEsp2SMS_des">Tarifa SMS: por mensaje, en centimos y sin IVA.</string>
    <string name="aj_tarifaEsp2EstLlamada">Tarifa establecimiento de llamadas</string>
    <string name="aj_tarifaEsp2EstLlamada_des">Tarifa establecimiento de llamadas: en centimos y sin IVA</string>
    <string name="aj_tarifaEsp2Activada">Activar tarifa</string>
    <string name="aj_tarifaEsp2Activada_des">Activar o desactivar la tarifa.</string>
    <string name="aj_colorEsp2">Color</string>
    <string name="aj_colorEsp2_des">Selecciona el color que identifica esta tarifa.</string>
    <string name="aj_limite">Límite</string>
    <string name="aj_limite_des">Límite de gastos. Llamada que supera este límite, icono rojo.</string>
    <string name="aj_mes">Mes</string>
    <string name="aj_mes_des">Selecciona el mes que quieres comprobar.</string>
    <string name="aj_inicioMes">Día de inicio de facturación</string>
    <string name="aj_inicio_mes">Día del mes en que se inicia la facturación.</string>
    <string name="aj_duracion">Duración modificada</string>
    <string name="aj_duracion_des">Segundos que se le añaden a la duración de las llamadas.</string>
    <string name="aj_numGratis">Números sin coste</string>
    <string name="aj_numGratis_des">Números, separados por coma, que tienen coste de llamada 0€.</string>
    <string name="aj_establecimiento">Establecimiento de llamada</string>
    <string name="aj_establecimiento_des">Mostrar el % correspondiente al establecimiento de llamada</string>
    <string name="mn_ajustes">Ajustes</string>
    <string name="mn_acercade">Acerca De</string>
    <string name="mn_estadisticas">Estadisticas</string>
    <string name="mnctx_titulo">Números especiales</string>
    <string name="mnctx_opc1">Añadir a números sin coste</string>
    <string name="mnctx_opc2">Eliminar de números sin coste</string>
    <string name="error_ajustes">Algunos ajustes tienen valores incorrectos o son nulos. Se tomaran sus valores por defecto.</string>
    <string name="actualizar">Actualizando...</string>
    <string name="acercade_activity">Acerca de ... GASTOS MÓVIL</string>
    <string name="acercade_titulo">GASTOS MÓVIL v.2.3.1.beta</string>
    <string name="acercade_texto">Controla tu gasto de teléfono y a tu operador.</string>
    <string name="acercade_autor_cab">Autor y Licencia</string>
    <string name="acercade_autor">Antonio C. A. Abellán - acabellan@gmail.com</string>
    <string name="acercade_licencia">Gastos Móvil es software libre; bajo los términos de la Licencia Pública General de GNU V3</string>
    <string name="acercade_traduccion_cab">Traducción</string>
    <string name="acercade_traduccion_en">en - M. Jose Flamil - joseperr@hotmail.com</string>
    <string name="acercade_traduccion_it">it - Suma Enzo Tagliatelli - suma.enzo@libero.it</string>
    <string name="mensaje_noexiste">El número no existe en el registro.</string>
	<string name="mensaje_existe">El número ya está en el registro.</string>
	<string name="mensaje_noexistellamadas">No existen llamadas para el mes seleccionado.</string>
	<string name="estadistica_titulo">Total de gastos por número.</string>
	<string name="gpn_resumen">Números - Total de gastos por números</string>
	<string name="gph_resumen">Horas - Total de gastos por horas</string>
	<string name="gpn_titulo">Total de gastos por números</string>
	<string name="gph_titulo">Total de gastos por horas</string>
	<string name="estadisticas_activity">Gastos Móvil</string>
	<string name="mensaje_existeoerror">El número ya esta asociado a alguna tarifa o error de escritura en la memoria SD.</string>
	<string name="mn_tarifas">Configurar Tarifas</string>
	<string name="aj_tarifa_defecto">Tarifa por defecto (en desuso)</string>
	<string name="aj_tarifa_defecto_des">Tarifa, con franja horaria, que se aplica cuando un numero de tlf. no está esociado a una tarifa (en desuso).</string>
	<string name="mn_nueva_tarifa">Nueva Tarifa</string>
	<string name="mn_nueva_tarifa_predefinida">Nueva Tarifa Predefinida</string>
	<string name="mn_eliminar_tarifa">Eliminar Tarifa</string>
	<string name="mn_nueva_franja">Nueva Franja</string>
	<string name="mn_eliminar_franja">Eliminar Franja</string>
	<string name="tituloInputBox">Introduce texto</string>
	<string name="cabTarifa">Tarifa</string>
	<string name="cabTarifas">Tarifas</string>
	<string name="cabFranja">Franja de ... </string>
	<string name="lista_vacia">No hay datos en el registro de llamadas o no hay tarifa con franjas definida -> Menu + Tarifa con franjas.</string>
	<string name="tarifas_vacias">No hay tarifas definidas. Para definir una nueva tarifa -> Menu + Nueva Tarifa o Menu + Nueva Tarifa Predefinida</string>
	<string name="aj_franja_nombre_des">Nombre que identifica a la franja.</string>
	<string name="aj_franja_dias">Selecciona dias de la semana</string>
	<string name="aj_franja_coste_des">Coste de la llamada, cuando no se sobrepase los limites de tiempo de la tarifa o cuando no tiene limite de tiempo. En centimos y sin iva.</string>
	<string name="aj_franja_establecimiento_des">Coste del establecimiento de llamada, cuando no se sobrepase los limites de tiempo de la tarifa o cuando no tiene limite de tiempo. En centimos y sin iva.</string>
	<string name="aj_franja_coste_limite_des">Coste de la llamada, cuando se sobrepase los limites de tiempo de la tarifa. En centimos y sin iva.</string>
	<string name="aj_franja_establecimiento_limite_des">Coste del establecimiento de llamada, cuando se sobrepase los limites de tiempo de la tarifa. En centimos y sin iva.</string>
	<string name="aj_tarifa_nombre_des">Nombre que identifica a la tarifa.</string>
	<string name="aj_tarifa_gastoMinimo_des">Gasto Mínimo al mes (en euros y sin iva).</string>
	<string name="aj_tarifa_limite_des">Límite de llamadas, al mes y en minutos.</string>
	<string name="aj_tarifa_numeros_des">Números asociados a la tarifa y a los que se le aplica los coste de la misma, separados por coma. Se puede incluir palabras claves: [movil], [fijo] para seleccionar los números correspodientes y [empieza por xxx] para números que empiecen por unos digitos concretos, ejemplo [empieza por 902,fijos,600655434]. Los demas se consideran números enteros.</string>
	<string name="aj_SMSGratis">SMS Gratuitos</string>
	<string name="aj_SMSGratis_des">Número de SMS gratuitos al mes.</string>
	<string name="conflicto_hora">Revisa los horarios de las franjas. Hay horas duplicadas o sin asignar.</string>
	<string name="acercade_ayuda_cab">Video Manuales</string>
	<string name="acercade_ayuda">En breve, enlace con videos de youtube, donde se explica como ajustar los parámetros de la aplicación y ejemplos a partir de tarifas reales y como configurarlas en la aplicación.</string>
	<string name="acercade_youtube2">Asociar Números - http://youtu.be/XgG2LG-w8fg</string>
	<string name="acercade_youtube1">Configurar Tarifas - http://youtu.be/6JbQH1CpzlA</string>
	<string name="acercade_webGastoMovil">http://deeloco.simahuelva.es/</string>
	<string name="aj_tarifaActivada">Activar tarifa única</string>
    <string name="aj_tarifaActivada_des">Activar o desactivar la tarifa única.</string>
    <string name="aj_tarifaNormal">Tarifa Única.</string>
    <string name="aj_tarifaNormal_des">Tarifa única, sin franjas horarias. Misma tarifa a cualquier hora y operador.</string>
    <string name="aj_impuestos">Impuestos.</string>
    <string name="aj_impuestos_des">Impuestos aplicable a las llamadas telefónicas (en %).</string>
    <string name="Gastado">Gastado </string>
    <string name="Hablado">Hablado </string>
    <string name="Limite">Limite </string>
    <string name="Gasto_minimo">Mín.</string>
    <string name="Sin_gasto_minimo">Sin gasto mínimo</string>
    <string name="pref_tarifa_nombre">Nombre</string>
    <string name="pref_tarifa_minimo">Gasto Mínimo Mensual</string>
    <string name="pref_tarifa_limite">Límite del mes (min.)</string>
    <string name="pref_tarifa_color">Color</string>
    <string name="pref_tarifa_numeros">"Numeros Asociados a la tarifa"</string>
    <string name="pref_tarifa_franja">Franja Horaria</string>
    <string name="aj_nombreAgenda">Nombre de contacto</string>
    <string name="aj_nombreAgenda_des">Mostrar en el listado el nombre de contacto.</string>
    <string name="pref_tarifa_limite_dia">Límite de un día (min.)</string>
    <string name="pref_tarifa_limite_llamada">Límite de una llamada (min.)</string>
    <string name="aj_tarifa_limite_dia_des">Límite de llamadas, al día y en minutos.</string>
    <string name="aj_tarifa_limite_llamada_des">Límite de una llamada, en minutos.</string>
    <string name="aj_descuento">Descuento</string>
    <string name="aj_descuento_des">Porcentaje de descuento que la operadora nos aplica a la factura.</string>
    <string name="aj_gastoMinimo">Gasto Mínimo</string>
    <string name="aj_gasto_minimo">Gasto mínimo que aplica la operadora. En euros</string>
    <string name="aj_decimales">Decimales en las llamadas</string>
    <string name="aj_decimales_des">Números de decimales que deben aparecer al calcular el coste de las llamadas (entre 2 y 4 decimales).</string>
    <string name="aj_cuota">Cuota Mensual</string>
    <string name="aj_cuota_des">Cuota mensual de la línea teléfonica (sin iva).</string>
    <string name="aj_tarifaPlana">Tarifa Plana Internet</string>
    <string name="aj_tarifaPlana_des">Coste de la tarifa plana de internet (sin iva).</string>
    <string name="pliego_descargo">Los resultados mostrados en esta factura no tienen valor legal y deben se usado solo a modo orientativo.</string>
</resources>