<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="Tarifas">
		<PreferenceScreen
			android:key="psTarifaNormal"
			android:title="@string/aj_tarifaNormal"
			android:summary="@string/aj_tarifaNormal_des">
		<EditTextPreference
			android:name="@string/aj_tarifaLlamadas"
			android:summary="@string/aj_tarifaLlamadas_des"
			android:defaultValue="8"
			android:inputType="phone"
			android:title="@string/aj_tarifaLlamadas"
			android:key="txtTarifaLlamadas" 
			android:numeric="decimal"/>
			
		<EditTextPreference
			android:name="@string/aj_tarifaSMS"
			android:summary="@string/aj_tarifaSMS_des"
			android:defaultValue="9"
			android:inputType="phone"
			android:title="@string/aj_tarifaSMS"
			android:key="txtTarifaSMS" />
			
		<EditTextPreference
			android:name="@string/aj_tarifaEstLlamada"
			android:summary="@string/aj_tarifaEstLlamada_des"
			android:defaultValue="15"
			android:inputType="phone"
			android:title="@string/aj_tarifaEstLlamada"
			android:key="txtTarifaEstLlamada" />
			
		<ListPreference
            android:title="@string/aj_color"
            android:summary="@string/aj_color_des"
            android:key="listColores"
            android:defaultValue="0"
            android:entries="@array/colores"
            android:entryValues="@array/colores_valores"
            android:dialogTitle="COLORES" />
            
		</PreferenceScreen>
		<PreferenceScreen
			android:key="psTarifaEsp1"
			android:title="@string/aj_tarifaEsp1"
			android:summary="@string/aj_tarifaEsp1_des">
			
		<EditTextPreference
			android:name="@string/aj_tarifaEsp1Nombre"
			android:summary="@string/aj_tarifaEsp1Nombre_des"
			android:defaultValue="Tarifa Especial 1"
			android:title="@string/aj_tarifaEsp1Nombre"
			android:key="txtTarifaEsp1Nombre" />
			
		<EditTextPreference
			android:name="@string/aj_tarifaEsp1Llamadas"
			android:summary="@string/aj_tarifaEsp1Llamadas_des"
			android:defaultValue="8"
			android:inputType="phone"
			android:title="@string/aj_tarifaEsp1Llamadas"
			android:key="txtTarifaEsp1Llamadas" />
			
		<EditTextPreference
			android:name="@string/aj_tarifaEsp1SMS"
			android:summary="@string/aj_tarifaEsp1SMS_des"
			android:defaultValue="9"
			android:inputType="phone"
			android:title="@string/aj_tarifaEsp1SMS"
			android:key="txtTarifaEsp1SMS" />
			
		<EditTextPreference
			android:name="@string/aj_tarifaEsp1EstLlamada"
			android:summary="@string/aj_tarifaEsp1EstLlamada_des"
			android:defaultValue="15"
			android:inputType="phone"
			android:title="@string/aj_tarifaEsp1EstLlamada"
			android:key="txtTarifaEsp1EstLlamada" />
			
		<CheckBoxPreference
			android:title="@string/aj_tarifaEsp1Activada"
			android:summary="@string/aj_tarifaEsp1Activada_des"
			android:defaultValue="false"
			android:key="cboxTarifaEsp1" />
			
		<ListPreference
            android:title="@string/aj_colorEsp1"
            android:summary="@string/aj_colorEsp1_des"
            android:key="listColoresEsp1"
            android:defaultValue="3"
            android:entries="@array/colores"
            android:entryValues="@array/colores_valores"
            android:dialogTitle="COLORES" />


		</PreferenceScreen>
		<PreferenceScreen
			android:key="psTarifaEsp2"
			android:title="@string/aj_tarifaEsp2"
			android:summary="@string/aj_tarifaEsp2_des">
			
		<EditTextPreference
			android:name="@string/aj_tarifaEsp2Nombre"
			android:summary="@string/aj_tarifaEsp2Nombre_des"
			android:defaultValue="Tarifa Especial 2"
			android:title="@string/aj_tarifaEsp2Nombre"
			android:key="txtTarifaEsp2Nombre" />			
			
		<EditTextPreference
			android:name="@string/aj_tarifaEsp2Llamadas"
			android:summary="@string/aj_tarifaEsp2Llamadas_des"
			android:defaultValue="8"
			android:inputType="phone"
			android:title="@string/aj_tarifaEsp2Llamadas"
			android:key="txtTarifaEsp2Llamadas" />
			
		<EditTextPreference
			android:name="@string/aj_tarifaEsp2SMS"
			android:summary="@string/aj_tarifaEsp2SMS_des"
			android:defaultValue="9"
			android:inputType="phone"
			android:title="@string/aj_tarifaEsp2SMS"
			android:key="txtTarifaEsp2SMS" />
			
		<EditTextPreference
			android:name="@string/aj_tarifaEsp2EstLlamada"
			android:summary="@string/aj_tarifaEsp2EstLlamada_des"
			android:defaultValue="15"
			android:inputType="phone"
			android:title="@string/aj_tarifaEsp2EstLlamada"
			android:key="txtTarifaEsp2EstLlamada" />
			
		<CheckBoxPreference
			android:title="@string/aj_tarifaEsp2Activada"
			android:summary="@string/aj_tarifaEsp2Activada_des"
			android:defaultValue="false"
			android:key="cboxTarifaEsp2" />		
			
		<ListPreference
            android:title="@string/aj_colorEsp1"
            android:summary="@string/aj_colorEsp1_des"
            android:key="listColoresEsp2"
            android:defaultValue="2"
            android:entries="@array/colores"
            android:entryValues="@array/colores_valores"
            android:dialogTitle="COLORES" />	
			
		</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory android:title="Otros ajustes">
			
		<ListPreference
            android:title="@string/aj_mes"
            android:summary="@string/aj_mes_des"
            android:key="listMes"
            android:defaultValue="1"
            android:entries="@array/listaMeses"
            android:entryValues="@array/valoresMeses"
            android:dialogTitle="MESES" />
            
		<EditTextPreference
			android:name="@string/aj_duracion"
			android:summary="@string/aj_duracion_des"
			android:defaultValue="0"
			android:inputType="phone"
			android:title="@string/aj_duracion"
			android:key="txtDuracion" />
			
		<CheckBoxPreference
            android:key="chbox_establecimiento"
            android:title="@string/aj_establecimiento"
            android:summary="@string/aj_establecimiento_des" 
            android:defaultValue="false"/>
	</PreferenceCategory>
</PreferenceScreen>