<?xml version="1.0" encoding="utf-8"?>
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<TextView 
	android:id="@+id/cabResumen"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/cabDatos"
    android:paddingLeft="20dp"
    style="?android:attr/listSeparatorTextViewStyle"/>
	    
	<LinearLayout android:id="@+id/lytAreaResumen"
	android:layout_width="fill_parent"
	android:layout_height="0dp">
				
     	<ScrollView android:id="@+id/ScrollView01"
 				android:layout_width="fill_parent" 
 				android:layout_below="@+id/ImageView01"
 				android:layout_height="fill_parent">	
		 	 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		              android:id="@+id/lytResumen"
		              android:orientation="vertical"
		              android:layout_width="fill_parent"
		              android:layout_height="fill_parent"
		              android:padding="5dp"> 
		     </LinearLayout>
       	</ScrollView>
	</LinearLayout> 

<LinearLayout android:id="@+id/lytCabResumen"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
style="?android:attr/listSeparatorTextViewStyle">
				
	<ImageView android:id="@+id/preImagen"
	android:layout_width="16px"
	android:layout_height="16px"
	android:src="@android:drawable/arrow_down_float" 
	android:padding="3dp" />		
		
	<TextView  android:id="@+id/cabRegistros"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:text="@string/cabRegistros"/>
    
	<ImageView android:id="@+id/postImagen"
	android:layout_width="16px"
	android:layout_height="16px"
	android:src="@android:drawable/arrow_down_float" 
	android:padding="3dp" />
		
</LinearLayout>

<ListView 
		android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

<TextView 
		android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_vacia"/>
        
</LinearLayout>